# knowledge-hub

./: .all-contributorsrc  .allcontributorsrc  .git-blame-ignore-revs  .gitignore  .lycheeignore  .pre-commit-config.yaml  .prettierrc  .prettierrc.cjs  404.html  CNAME  README.md  README.md.save  config.toml  index.html  index.json  package-lock.json  package.json  pyproject.toml  re  requirements.in  requirements.txt  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js  youtube.html
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-resource-suggestion.yml  02-content-edit.md  02-resource-onboarding.yml  03-content-edit.md  03-site-feature-suggestion.md  04-bug-report.md  05-youtuber-suggestion.yml  06-youtuber-suggestion.yml  bug_report.md  content-improvement-correction.md  resource.yml  site-improvement-suggestion.md  youtube.yml
.github/workflows/: build.yml  discord.yml  onboarding.yml  stale.yml  test.yml  url-checker.yml
categories/: index.html
content/: _index.md
data/: resource_onboarding_template.csv  resource_tags.schema.json  resource_tags.yml  resources.schema.json  resources.yml  video_data.json  yaml.test.ts  yaml_test.py  youtube_channel_ids.schema.json  youtube_channel_ids.yml
guides/: index.html
links/: index.html
scripts/: check_urls.exs  check_urls.py  check_urls.ts  collate.py  discord_integration.py  get_og_previews.py  onboarding.py  resource_converter.py  validate_tags.py  youtube.py
src/: app.css  app.d.ts  app.html
tags/: index.html
(+48 files in other folders)
